tdf#155720 remove old skip notebookbar init workaround

This was introduced due to not working Paste Special dialog
in LOK case. Now everything seems to be ok. Single initialization
should make loading process faster.

Change-Id: Ic464908ef044cc446626fff0fb9b4f57e061aea3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/153143
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>